2008-01-23  Sebastian Dröge  <slomo@circular-chaos.org>

	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-bad-plugins-docs.sgml:
	* docs/plugins/gst-plugins-bad-plugins-sections.txt:
	* gst/xingheader/gstxingmux.c:
	* gst/xingheader/gstxingmux.h:
	Add documentation for the xingheader plugin.

	* tests/check/elements/xingmux.c: (GST_START_TEST):
	Set element state to PLAYING before doing something else.

2008-01-23  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/Makefile.am:
	* tests/check/elements/.cvsignore:
	* tests/check/elements/xingmux.c: (setup_xingmux),
	(cleanup_xingmux), (GST_START_TEST), (xingmux_suite), (main):
	* tests/check/elements/xingmux_testdata.h:
	Add simple unit test for the xingmux element.

	* gst/xingheader/gstxingmux.c: (generate_xing_header),
	(gst_xing_mux_finalize), (xing_reset):
	Fix a memleak and invalid seek tables with less than 100 MP3 frames.

2008-01-23  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* gst/mpegtsparse/gstmpegdesc.h:
	* gst/mpegtsparse/mpegtspacketizer.c:
	Parsed the satellite delivery system descriptor and
	added into nit's transport structure for delivery
	over the bus.

2008-01-22  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* gst/mpegtsparse/mpegtspacketizer.c:
	Parsed and added network name to the nit structure sent
	in the bus message.

2008-01-22  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* gst/mpegtsparse/mpegtspacketizer.c:
	Remove leaks introduced by not freeing g_strndup'd strings.
	Fix start_time and duration parsing in EIT.

2008-01-22  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* gst/mpegtsparse/mpegtspacketizer.c:
	Add event name and description to the eit structure
	sent in the bus message.

2008-01-22  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* gst/mpegtsparse/mpegtsparse.c:
	Revert const removal from previous commit.

2008-01-22  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* gst/mpegtsparse/Makefile.am: